--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=productService
+spring.datasource.url=jdbc:mysql://localhost:3306/product_service?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=vishal
+spring.datasource.password=password
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
+
+#####
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=vishalbhalla8095@gmail.com
+spring.mail.password=nsib hwpu lftz xsjs
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
